--- a/frontend/RedditClone/src/app/register/register.component.html
+++ b/frontend/RedditClone/src/app/register/register.component.html
@@ -21,9 +21,10 @@
         </mat-form-field>
       </p>
     </mat-card-content>
-    <mat-card-content>
+    <mat-card-actions>
       <button mat-raised-button type="submit" color="primary">Hop onboard</button>
-    </mat-card-content>
+      <a mat-button routerLink="/login">Already have an account? Log in</a>
+    </mat-card-actions>
   </mat-card>
 
 
