Added navbar and centered content

--- a/frontend/RedditClone/src/app/login/login.component.html
+++ b/frontend/RedditClone/src/app/login/login.component.html
@@ -20,7 +20,7 @@
     </mat-card-content>
     <mat-card-actions>
       <button mat-raised-button type="submit" color="primary">Get in</button>
-      <a mat-button routerLink="/">Don't have an account? Come onboard</a>
+      <a mat-button routerLink="/register">Don't have an account? Come onboard</a>
     </mat-card-actions>
   </mat-card>
 </form>
