Still on this...

--- a/reddit/templates/index.html
+++ b/reddit/templates/index.html
@@ -11,6 +11,7 @@
   <a href='/register'>Register</a>
   {% if session["loggedIn"] %}
     <a href="/posts">Add post</a>
+    <a href="/myPosts">My Posts</a>
     <a href="/logout">Log out</a>
   {% endif %}
 </body>
