[Update] Added comments backend.

--- a/reddit/templates/edit_comment.html
+++ b/reddit/templates/edit_comment.html
@@ -10,7 +10,7 @@
         <p>
             <label>
               Comment:
-              <input name="comment" placeholder={{comment.content}}>
+              <input name="comment" value={{comment.content}}>
             </label>
         </p>
         <p>
