Added link to subreddit search

--- a/reddit/templates/index.html
+++ b/reddit/templates/index.html
@@ -12,6 +12,7 @@
   {% if session["loggedIn"] %}
     <a href="/posts">Add post</a>
     <a href="/myPosts">My Posts</a>
+    <a href="/r">Search subreddits</a>
     <a href="/logout">Log out</a>
     <h1>My Feed</h1>
     {% for post in posts %}
